removed -r extension from gene-tag elements

--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -202,7 +202,7 @@
         <cvc-assertion-tag-r [assertion]="aid"></cvc-assertion-tag-r>
       </td>
       <td>
-        <cvc-gene-tag-r [gene]="aid.gene"></cvc-gene-tag-r>
+        <cvc-gene-tag [gene]="aid.gene"></cvc-gene-tag>
       </td>
       <td>
         <cvc-variant-tag-r [variant]="aid.variant"></cvc-variant-tag-r>
