--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -125,7 +125,7 @@
           <cvc-variant-tag-r [variant]="variant"></cvc-variant-tag-r>
         </td>
         <td>
-          <cvc-gene-tag-r [gene]="{id: variant.geneId, name: variant.geneName}"></cvc-gene-tag-r>
+          <cvc-gene-tag [gene]="{id: variant.geneId, name: variant.geneName}"></cvc-gene-tag>
         </td>
         <td>
           <cvc-tag-overflow tagType="disease"
