--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -9,7 +9,7 @@
           nzType="civic:assertion"></i> {{ assertion.name }}
       </ng-template>
       <ng-template #geneAndVariant>
-        <cvc-gene-tag-r [enablePopover]="false" [gene]="assertion.gene"></cvc-gene-tag-r>
+        <cvc-gene-tag [enablePopover]="false" [gene]="assertion.gene"></cvc-gene-tag>
         <cvc-variant-tag-r [enablePopover]="false" [variant]="assertion.variant"></cvc-variant-tag-r>
       </ng-template>
       <nz-row>
