--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -9,7 +9,7 @@
           nzType="civic:evidence"></i> {{ evidence.name }}
       </ng-template>
       <ng-template #geneAndVariant>
-        <cvc-gene-tag-r [enablePopover]="false" [gene]="evidence.gene"></cvc-gene-tag-r>
+        <cvc-gene-tag [enablePopover]="false" [gene]="evidence.gene"></cvc-gene-tag>
         <cvc-variant-tag-r [enablePopover]="false" [variant]="evidence.variant"></cvc-variant-tag-r>
       </ng-template>
       <nz-row>
