--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -277,7 +277,7 @@
         <cvc-evidence-tag-r [evidence]="eid"></cvc-evidence-tag-r>
       </td>
       <td *ngIf="displayGeneAndVariant">
-        <cvc-gene-tag-r [gene]="eid.gene"></cvc-gene-tag-r>
+        <cvc-gene-tag [gene]="eid.gene"></cvc-gene-tag>
       </td>
       <td *ngIf="displayGeneAndVariant">
         <cvc-variant-tag-r [variant]="eid.variant"></cvc-variant-tag-r>
