--- a/client/src/app/components/shared/comment-popover/comment-popover.component.html
+++ b/client/src/app/components/shared/comment-popover/comment-popover.component.html
@@ -6,7 +6,7 @@
         <span class="comment-card-title">
         <cvc-user-tag [enablePopover]="false" [user]="c.commenter"></cvc-user-tag>commented on
         <ng-container [ngSwitch]="c.commentable.__typename">
-          <cvc-gene-tag-r *ngSwitchCase="'Gene'" [enablePopover]="false" [gene]="c.commentable"></cvc-gene-tag-r>
+          <cvc-gene-tag *ngSwitchCase="'Gene'" [enablePopover]="false" [gene]="c.commentable"></cvc-gene-tag>
           <cvc-assertion-tag *ngSwitchCase="'Assertion'" [enablePopover]="false" [assertion]="c.commentable"></cvc-assertion-tag>
           <cvc-evidence-tag *ngSwitchCase="'EvidenceItem'" [enablePopover]="false" [evidence]="c.commentable"></cvc-evidence-tag>
           <cvc-variant-tag *ngSwitchCase="'Variant'" [enablePopover]="false" [variant]="c.commentable"></cvc-variant-tag>
