--- a/client/src/app/components/shared/variants-menu/variants-menu.component.html
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.html
@@ -70,7 +70,7 @@
         <cvc-tag-list size="sm">
           <ng-container
             *ngFor="let v of variants">
-            <cvc-variant-tag [variant]="v"></cvc-variant-tag>
+            <cvc-variant-tag-r [variant]="v"></cvc-variant-tag-r>
           </ng-container>
         </cvc-tag-list>
       </nz-col>
