using new variant tag/popover elements everywhere

--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -205,7 +205,7 @@
         <cvc-gene-tag [gene]="aid.gene"></cvc-gene-tag>
       </td>
       <td>
-        <cvc-variant-tag-r [variant]="aid.variant"></cvc-variant-tag-r>
+        <cvc-variant-tag [variant]="aid.variant"></cvc-variant-tag>
       </td>
       <td>
         <ng-container *ngIf="aid.disease.name; else diseaseElse">
