--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -122,7 +122,7 @@
     <tbody>
       <tr *ngFor="let variant of variantsTable.data">
         <td>
-          <cvc-variant-tag-r [variant]="variant"></cvc-variant-tag-r>
+          <cvc-variant-tag [variant]="variant"></cvc-variant-tag>
         </td>
         <td>
           <cvc-gene-tag [gene]="{id: variant.geneId, name: variant.geneName}"></cvc-gene-tag>
