--- a/client/src/app/components/shared/assertion-popover/assertion-popover.component.html
+++ b/client/src/app/components/shared/assertion-popover/assertion-popover.component.html
@@ -10,7 +10,7 @@
       </ng-template>
       <ng-template #geneAndVariant>
         <cvc-gene-tag [enablePopover]="false" [gene]="assertion.gene"></cvc-gene-tag>
-        <cvc-variant-tag-r [enablePopover]="false" [variant]="assertion.variant"></cvc-variant-tag-r>
+        <cvc-variant-tag [enablePopover]="false" [variant]="assertion.variant"></cvc-variant-tag>
       </ng-template>
       <nz-row>
         <nz-col nzSpan="24">
