--- a/client/src/app/components/shared/comment-popover/comment-popover.component.html
+++ b/client/src/app/components/shared/comment-popover/comment-popover.component.html
@@ -9,7 +9,7 @@
           <cvc-gene-tag *ngSwitchCase="'Gene'" [enablePopover]="false" [gene]="c.commentable"></cvc-gene-tag>
           <cvc-assertion-tag *ngSwitchCase="'Assertion'" [enablePopover]="false" [assertion]="c.commentable"></cvc-assertion-tag>
           <cvc-evidence-tag *ngSwitchCase="'EvidenceItem'" [enablePopover]="false" [evidence]="c.commentable"></cvc-evidence-tag>
-          <cvc-variant-tag-r *ngSwitchCase="'Variant'" [enablePopover]="false" [variant]="c.commentable"></cvc-variant-tag-r>
+          <cvc-variant-tag *ngSwitchCase="'Variant'" [enablePopover]="false" [variant]="c.commentable"></cvc-variant-tag>
           <span *ngSwitchDefault>{{ c.commentable.name }}</span>
         </ng-container>
         {{ c.createdAt | timeago }}
