--- a/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-detail.component.html
@@ -15,7 +15,7 @@
           <cvc-gene-tag [gene]="assertion.gene"></cvc-gene-tag>
         </a>
         <a routerLink="/variants/{{ assertion.variant.id }}">
-          <cvc-variant-tag-r [variant]="assertion.variant"></cvc-variant-tag-r>
+          <cvc-variant-tag [variant]="assertion.variant"></cvc-variant-tag>
         </a>
       </nz-space-item>
 
