--- a/client/src/app/views/evidence/evidence-detail/evidence-detail.component.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-detail.component.html
@@ -15,7 +15,7 @@
           <cvc-gene-tag [gene]="evidence.gene"></cvc-gene-tag>
         </a>
         <a routerLink="/variants/{{ evidence.variant.id }}">
-          <cvc-variant-tag-r [variant]="evidence.variant"></cvc-variant-tag-r>
+          <cvc-variant-tag [variant]="evidence.variant"></cvc-variant-tag>
         </a>
       </nz-space-item>
 
