--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -274,7 +274,7 @@
   <tbody>
     <tr *ngFor="let eid of evidenceTable.data">
       <td>
-        <cvc-evidence-tag-r [evidence]="eid"></cvc-evidence-tag-r>
+        <cvc-evidence-tag [evidence]="eid"></cvc-evidence-tag>
       </td>
       <td *ngIf="displayGeneAndVariant">
         <cvc-gene-tag [gene]="eid.gene"></cvc-gene-tag>
