removed shared asssertion tag/popover components

--- a/client/src/app/components/assertions/assertions-tag/assertion-tag.component.html
+++ b/client/src/app/components/assertions/assertions-tag/assertion-tag.component.html
@@ -15,7 +15,7 @@
   </nz-tag>
 
   <ng-template #assertionPopover>
-    <cvc-assertion-popover-r [assertionId]="assertion.id"></cvc-assertion-popover-r>
+    <cvc-assertion-popover [assertionId]="assertion.id"></cvc-assertion-popover>
   </ng-template>
 </ng-template>
 
