actually renaming assertion-tags...

--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -199,7 +199,7 @@
   <tbody>
     <tr *ngFor="let aid of assertionsTable.data">
       <td>
-        <cvc-assertion-tag-r [assertion]="aid"></cvc-assertion-tag-r>
+        <cvc-assertion-tag [assertion]="aid"></cvc-assertion-tag>
       </td>
       <td>
         <cvc-gene-tag [gene]="aid.gene"></cvc-gene-tag>
