deleted shared clinical-trial tag/popover components

--- a/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trials-table/clinical-trials-table.component.html
@@ -51,7 +51,7 @@
   <tbody>
     <tr *ngFor="let t of clinicalTrialsTable.data">
       <td>
-        <cvc-clinical-trial-tag-r [clinicalTrial]="t"></cvc-clinical-trial-tag-r>
+        <cvc-clinical-trial-tag [clinicalTrial]="t"></cvc-clinical-trial-tag>
       </td>
       <td>
         {{ t.name }}
