using refactored source-tag/popover components

--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -83,7 +83,7 @@
   <tbody>
     <tr *ngFor="let source of sourcesTable.data">
       <td>
-        <cvc-source-tag-r [source]="source"></cvc-source-tag-r>
+        <cvc-source-tag [source]="source"></cvc-source-tag>
       </td>
       <td>
         {{ source.displayType }}
