--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -32,7 +32,7 @@
         <!-- source -->
         <nz-descriptions-item nzTitle="Source"
           nzSpan="2">
-          <cvc-source-tag-r [source]="evidence.source"></cvc-source-tag-r>
+          <cvc-source-tag [source]="evidence.source"></cvc-source-tag>
         </nz-descriptions-item>
 
         <!-- evidence level -->
