--- a/client/src/app/components/sources/source-tag/source-tag.component.html
+++ b/client/src/app/components/sources/source-tag/source-tag.component.html
@@ -15,7 +15,7 @@
   </nz-tag>
 
   <ng-template #sourcePopover>
-    <cvc-source-popover-r [sourceId]="source.id"></cvc-source-popover-r>
+    <cvc-source-popover [sourceId]="source.id"></cvc-source-popover>
   </ng-template>
 </ng-template>
 
