--- a/client/src/app/components/diseases/cvc-disease-tag/cvc-disease-tag.component.html
+++ b/client/src/app/components/diseases/cvc-disease-tag/cvc-disease-tag.component.html
@@ -15,7 +15,7 @@
   </nz-tag>
 
   <ng-template #diseasePopover>
-    <cvc-disease-popover-r [diseaseId]="disease.id"></cvc-disease-popover-r>
+    <cvc-disease-popover [diseaseId]="disease.id"></cvc-disease-popover>
   </ng-template>
 </ng-template>
 
