--- a/client/src/app/components/shared/cvc-tag-overflow/cvc-tag-overflow.component.html
+++ b/client/src/app/components/shared/cvc-tag-overflow/cvc-tag-overflow.component.html
@@ -6,7 +6,7 @@
         <cvc-drug-tag-r [drug]="tag"></cvc-drug-tag-r>
       </ng-container>
       <ng-container *ngSwitchCase="'disease'">
-        <cvc-disease-tag-r [disease]="tag"></cvc-disease-tag-r>
+        <cvc-disease-tag [disease]="tag"></cvc-disease-tag>
       </ng-container>
     </ng-container>
   </div>
@@ -25,7 +25,7 @@
             <cvc-drug-tag-r [drug]="tag"></cvc-drug-tag-r>
           </ng-container>
           <ng-container *ngSwitchCase="'disease'">
-            <cvc-disease-tag-r [disease]="tag"></cvc-disease-tag-r>
+            <cvc-disease-tag [disease]="tag"></cvc-disease-tag>
           </ng-container>
         </ng-container>
       </div>
