--- a/client/src/app/components/diseases/diseases-table/diseases-table.component.html
+++ b/client/src/app/components/diseases/diseases-table/diseases-table.component.html
@@ -69,7 +69,7 @@
   <tbody>
     <tr *ngFor="let d of diseasesTable.data">
       <td>
-        <cvc-disease-tag-r [disease]="d"></cvc-disease-tag-r>
+        <cvc-disease-tag [disease]="d"></cvc-disease-tag>
       </td>
       <td>
         <cvc-link-tag *ngIf="d.doid; else noDoid"
