--- a/client/src/app/components/phenotypes/phenotype-tag/phenotype-tag.component.html
+++ b/client/src/app/components/phenotypes/phenotype-tag/phenotype-tag.component.html
@@ -15,7 +15,7 @@
   </nz-tag>
 
   <ng-template #phenotypePopover>
-    <cvc-phenotype-popover-r [phenotypeId]="phenotype.id"></cvc-phenotype-popover-r>
+    <cvc-phenotype-popover [phenotypeId]="phenotype.id"></cvc-phenotype-popover>
   </ng-template>
 </ng-template>
 
