--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -88,7 +88,7 @@
           nzSpan="2"
           *ngIf="evidence.phenotypes.length > 0">
           <span *ngFor="let ph of evidence.phenotypes">
-            <cvc-phenotype-tag-r [enablePopover]="false" [phenotype]="ph"></cvc-phenotype-tag-r>
+            <cvc-phenotype-tag [enablePopover]="false" [phenotype]="ph"></cvc-phenotype-tag>
           </span>
         </nz-descriptions-item>
 
