--- a/client/src/app/components/shared/event-timeline/event-timeline.component.html
+++ b/client/src/app/components/shared/event-timeline/event-timeline.component.html
@@ -57,7 +57,7 @@
           <!-- user organization -->
           <ng-container *ngIf="tagDisplay != 'hideOrg' && event.organization as org">
             <span nz-typography>for&nbsp;</span>
-            <cvc-org-tag [org]="org"></cvc-org-tag>
+            <cvc-organization-tag [org]="org"></cvc-organization-tag>
           </ng-container>
 
         </nz-col>
