using refactored variant-type tag/popover

--- a/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
+++ b/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
@@ -42,7 +42,7 @@
   <tbody>
     <tr *ngFor="let t of variantTypesTable.data">
       <td>
-        <cvc-variant-type-tag-r [variantType]="t"></cvc-variant-type-tag-r>
+        <cvc-variant-type-tag [variantType]="t"></cvc-variant-type-tag>
       </td>
       <td>
         <cvc-link-tag [href]="t.url"
