using refactored variant-group tag

--- a/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
+++ b/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
@@ -63,7 +63,7 @@
     <tbody>
       <tr *ngFor="let vg of variantGroupsTable.data">
         <td>
-          <cvc-variant-group-tag-r [variantgroup]="vg"></cvc-variant-group-tag-r>
+          <cvc-variant-group-tag [variantgroup]="vg"></cvc-variant-group-tag>
         </td>
         <td>
           <p nz-typography>
