shared flag-related components modularized and moved

--- a/client/src/app/forms/flags/forms/flag-resolve/flag-resolve.component.html
+++ b/client/src/app/forms/flags/forms/flag-resolve/flag-resolve.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: this needs to replace the current in-place flag resolve in flag-list -->
+
 <nz-alert *ngIf="errorMessages" nzType="error" nzShowIcon [nzDescription]="errorContents" nzMessage="Error Resolving Flag"> </nz-alert>
 <ng-template #errorContents>
   <ul>
