modularized source-id-input

--- a/client/src/app/forms/types/source-id-input/source-id-input.type.html
+++ b/client/src/app/forms/types/source-id-input/source-id-input.type.html
@@ -14,7 +14,7 @@
        </div>
        </div> -->
 </ng-container>
-<div>
-  <p>MODEL:</p>
-  <ngx-json-viewer [json]="sourceModel"></ngx-json-viewer>
-</div>
+<!-- <div>
+     <p>MODEL:</p>
+     <ngx-json-viewer [json]="sourceModel"></ngx-json-viewer>
+     </div> -->
