variant-revise routing, etc working

--- a/client/src/app/views/variants/variants-detail/variants-detail.view.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.view.html
@@ -44,7 +44,7 @@
 
           <!-- add revision btn -->
           <nz-space-item>
-            <button routerLink="suggest-revision"
+            <button [routerLink]="['/variants', variant.id, 'revise']"
               *ngIf="viewer.signedIn"
               routerLinkActive
               #rlaComments="routerLinkActive"
