--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
@@ -11,7 +11,7 @@
     </ng-container>
   </div>
   <div [ngClass]="{'matched-tag': matchedHiddenCount > 0}">
-    <nz-tag *ngIf="hiddenCount && hiddenCount > 0" nz-popover [nzPopoverMouseEnterDelay]="0.5"
+    <nz-tag class="overflow-tag" *ngIf="hiddenCount && hiddenCount > 0" nz-popover [nzPopoverMouseEnterDelay]="0.5" (click)="onOverflowClicked()"
       [nzPopoverContent]="additionalTagPopover" nzPopoverPlacement="top" nzPopoverTrigger="hover">
       +<span *ngIf="matchedHiddenCount > 0">{{matchedHiddenCount}} of </span>{{this.hiddenCount}} more
     </nz-tag>
