--- a/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
+++ b/client/src/app/components/shared/tag-overflow/tag-overflow.component.html
@@ -8,6 +8,9 @@
       <ng-container *ngSwitchCase="'disease'">
         <cvc-disease-tag [disease]="tag"></cvc-disease-tag>
       </ng-container>
+      <ng-container *ngSwitchCase="'organization'">
+        <cvc-organization-tag [org]="tag"></cvc-organization-tag>
+      </ng-container>
     </ng-container>
   </div>
   <div [ngClass]="{'matched-tag': matchedHiddenCount > 0}">
@@ -26,6 +29,9 @@
           </ng-container>
           <ng-container *ngSwitchCase="'disease'">
             <cvc-disease-tag [disease]="tag"></cvc-disease-tag>
+          </ng-container>
+          <ng-container *ngSwitchCase="'organization'">
+            <cvc-organization-tag [org]="tag"></cvc-organization-tag>
           </ng-container>
         </ng-container>
       </div>
