remove sorting where there are multiple entities as it doesnt make sense

--- a/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
+++ b/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
@@ -11,14 +11,10 @@
           [nzSortFn]="true">
           Name
         </th>
-        <th nzWidth="30%"
-          [nzColumnKey]="sortColumns.VariantNames"
-          [nzSortFn]="true">
+        <th nzWidth="30%">
           Variants
         </th>
-        <th nzWidth="30%"
-          [nzColumnKey]="sortColumns.GeneNames"
-          [nzSortFn]="true">
+        <th nzWidth="30%">
           Genes
         </th>
         <th nzWidth="10%"
