--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -16,14 +16,10 @@
           [nzSortFn]="true">
           Gene Symbol
         </th>
-        <th nzWidth="25%"
-          [nzColumnKey]="sortColumns.DiseaseName"
-          [nzSortFn]="true">
+        <th nzWidth="25%">
           Diseases
         </th>
-        <th nzWidth="25%"
-          [nzColumnKey]="sortColumns.DrugName"
-          [nzSortFn]="true">
+        <th nzWidth="25%">
           Drugs
         </th>
         <th nzWidth="3%"
